Fix custom commands layout (command overlaps buttons).

--- a/theme/luci-theme-argon/htdocs/luci-static/argon/css/cascade.css
+++ b/theme/luci-theme-argon/htdocs/luci-static/argon/css/cascade.css
@@ -5523,3 +5523,8 @@ pre.command-output {
 .login-form {
   background-color: rgb(255, 255, 255) !important;
 }
+
+.commandbox p code {
+  position: relative !important;
+  margin-bottom: 20px !important;
+}
